--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "April 03, 2021" "ugrep 3.1.11" "User Commands"
+.TH UGREP "1" "April 25, 2021" "ugrep 3.1.12" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -96,7 +96,7 @@ byte or invalid UTF.  Short options are \fB\-a\fR, \fB\-I\fR, \fB\-U\fR, \fB\-W\
 Specifies Boolean search patterns.  A Boolean search pattern is
 composed of `AND', `OR', `NOT' operators and grouping with `(' `)'.
 Spacing between subpatterns is the same as `AND', `|' is the same
-as `OR', and a `\fB\-'\fR is the same as `NOT'.  The `OR' operator binds
+as `OR', and a `\-' is the same as `NOT'.  The `OR' operator binds
 more tightly than `AND'.  For example, \fB\-\-bool\fR 'A|B C|D' matches
 lines with (`A' or `B') and (`C' or `D'), \fB\-\-bool\fR 'A \fB\-B\fR' matches
 lines with `A' and not `B'.  Operators `AND', `OR', `NOT' require
@@ -127,7 +127,7 @@ Only a count of selected lines is written to standard output.
 If \fB\-o\fR or \fB\-u\fR is specified, counts the number of patterns matched.
 If \fB\-v\fR is specified, counts the number of non\-matching lines.
 .TP
-\fB\-\-color[\fR=\fIWHEN\fR], \fB\-\-colour[\fR=\fIWHEN\fR]
+\fB\-\-color\fR[=\fIWHEN\fR], \fB\-\-colour\fR[=\fIWHEN\fR]
 Mark up the matching text with the expression stored in the
 GREP_COLOR or GREP_COLORS environment variable.  WHEN can be
 `never', `always', or `auto', where `auto' marks up matches only
@@ -146,7 +146,7 @@ bright.  A foreground and a background color may be combined with
 font properties `n' (normal), `f' (faint), `h' (highlight), `i'
 (invert), `u' (underline).  Selectively overrides GREP_COLORS.
 .TP
-\fB\-\-config[\fR=\fIFILE\fR], \fB\-\-\-[\fIFILE\fR]\fR
+\fB\-\-config\fR[=\fIFILE\fR], \fB\-\-\-\fR[\fIFILE\fR]
 Use configuration FILE.  The default FILE is `.ugrep'.  The working
 directory is checked first for FILE, then the home directory.  The
 options specified in the configuration FILE are parsed first,
@@ -198,7 +198,7 @@ Specify a PATTERN used during the search of the input: an input
 line is selected if it matches any of the specified patterns.
 Note that longer patterns take precedence over shorter patterns.
 This option is most useful when multiple \fB\-e\fR options are used to
-specify multiple patterns, when a pattern begins with a dash (`\fB\-'\fR),
+specify multiple patterns, when a pattern begins with a dash (`\-'),
 to specify a pattern after option \fB\-f\fR or after the FILE arguments.
 .TP
 \fB\-\-encoding\fR=\fIENCODING\fR
@@ -239,7 +239,7 @@ globbing.  This option may be repeated.
 Read the globs from FILE and skip files and directories whose name
 matches one or more globs (as if specified by \fB\-\-exclude\fR and
 \fB\-\-exclude\-dir\fR).  Lines starting with a `#' and empty lines in FILE
-are ignored.  When FILE is a `\fB\-'\fR, standard input is read.  This
+are ignored.  When FILE is a `\-', standard input is read.  This
 option may be repeated.
 .TP
 \fB\-\-exclude\-fs\fR=\fIMOUNTS\fR
@@ -260,7 +260,7 @@ Read newline\-separated patterns from FILE.  White space in patterns
 is significant.  Empty lines in FILE are ignored.  If FILE does not
 exist, the GREP_PATH environment variable is used as path to FILE.
 If that fails, looks for FILE in /usr/local/share/ugrep/patterns.
-When FILE is a `\fB\-'\fR, standard input is read.  Empty files contain no
+When FILE is a `\-', standard input is read.  Empty files contain no
 patterns; thus nothing is matched.  This option may be repeated.
 .TP
 \fB\-\-filter\fR=\fICOMMANDS\fR
@@ -273,11 +273,11 @@ standard input and write to standard output.  Files matching one of
 extensions are filtered.  One or more `option' separated by spacing
 may be specified, which are passed verbatim to the command.  A `%'
 as `option' expands into the pathname to search.  For example,
-\fB\-\-filter\fR='pdf:pdftotext % \fB\-'\fR searches PDF files.  The `%' expands
-into a `\fB\-'\fR when searching standard input.  Option \fB\-\-label\fR=.ext may
+\fB\-\-filter\fR='pdf:pdftotext % \-' searches PDF files.  The `%' expands
+into a `\-' when searching standard input.  Option \fB\-\-label\fR=.ext may
 be used to specify extension `ext' when searching standard input.
 .TP
-\fB\-\-filter\-magic\-label\fR=\fILABEL\fR:MAGIC
+\fB\-\-filter\-magic\-label\fR=[+]LABEL:MAGIC
 Associate LABEL with files whose signature "magic bytes" match the
 MAGIC regex pattern.  Only files that have no filename extension
 are labeled, unless +LABEL is specified.  When LABEL matches an
@@ -285,7 +285,7 @@ extension specified in \fB\-\-filter\fR=\fICOMMANDS\fR, the corresponding comman
 is invoked.  This option may be repeated.
 .TP
 \fB\-\-format\fR=\fIFORMAT\fR
-Output FORMAT\-formatted matches.  For example `\fB\-\-format\fR=%f:%n:%O%~'
+Output FORMAT\-formatted matches.  For example \fB\-\-format\fR='%f:%n:%O%~'
 outputs matching lines `%O' with filename `%f` and line number `%n'
 followed by a newline `%~'.  Context options \fB\-A\fR, \fB\-B\fR, \fB\-C\fR, and \fB\-y\fR are
 ignored.  See `man ugrep' section FORMAT.
@@ -309,7 +309,7 @@ matches the working directory.  This option may be repeated and may
 be combined with options \fB\-M\fR, \fB\-O\fR and \fB\-t\fR to expand the recursive
 search.
 .TP
-\fB\-\-group\-separator[\fR=\fISEP\fR]
+\fB\-\-group\-separator\fR[=\fISEP\fR]
 Use SEP as a group separator for context options \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR.
 The default is a double hyphen (`\fB\-\-\fR').
 .TP
@@ -345,7 +345,7 @@ Ignore matches in binary files.  This option is equivalent to the
 Perform case insensitive matching.  By default, ugrep is case
 sensitive.  This option applies to ASCII letters only.
 .TP
-\fB\-\-ignore\-files[\fR=\fIFILE\fR]
+\fB\-\-ignore\-files\fR[=\fIFILE\fR]
 Ignore files and directories matching the globs in each FILE that
 is encountered in recursive searches.  The default FILE is
 `.gitignore'.  Matching files and directories located in the
@@ -378,7 +378,7 @@ globbing.  This option may be repeated.
 Read the globs from FILE and search only files and directories
 whose name matches one or more globs (as if specified by \fB\-\-include\fR
 and \fB\-\-include\-dir\fR).  Lines starting with a `#' and empty lines in
-FILE are ignored.  When FILE is a `\fB\-'\fR, standard input is read.
+FILE are ignored.  When FILE is a `\-', standard input is read.
 This option may be repeated.
 .TP
 \fB\-\-include\-fs\fR=\fIMOUNTS\fR
@@ -452,7 +452,7 @@ Restrict the number of files matched to NUM.  Note that \fB\-\-sort\fR or
 \fB\-J\fR1 may be specified to produce replicable results.  If \fB\-\-sort\fR is
 specified, the number of threads spawned is limited to NUM.
 .TP
-\fB\-\-mmap[\fR=\fIMAX\fR]
+\fB\-\-mmap\fR[=\fIMAX\fR]
 Use memory maps to search files.  By default, memory maps are used
 under certain conditions to improve performance.  When MAX is
 specified, use up to MAX mmap memory per thread.
@@ -508,7 +508,7 @@ Interpret PATTERN as a Perl regular expression using PCRE2.
 If \fB\-R\fR or \fB\-r\fR is specified, no symbolic links are followed, even when
 they are specified on the command line.
 .TP
-\fB\-\-pager[\fR=\fICOMMAND\fR]
+\fB\-\-pager\fR[=\fICOMMAND\fR]
 When output is sent to the terminal, uses COMMAND to page through
 the output.  The default COMMAND is `less \fB\-R\fR'.  Enables \fB\-\-heading\fR
 and \fB\-\-line\-buffered\fR.
@@ -517,7 +517,7 @@ and \fB\-\-line\-buffered\fR.
 When output is sent to a terminal, enables \fB\-\-color\fR, \fB\-\-heading\fR, \fB\-n\fR,
 \fB\-\-sort\fR and \fB\-T\fR when not explicitly disabled or set.
 .TP
-\fB\-Q\fR[\fIDELAY\fR], \fB\-\-query[\fR=\fIDELAY\fR]
+\fB\-Q\fR[\fIDELAY\fR], \fB\-\-query\fR[=\fIDELAY\fR]
 Query mode: user interface to perform interactive searches.  This
 mode requires an ANSI capable terminal.  An optional DELAY argument
 may be specified to reduce or increase the response time to execute
@@ -558,16 +558,16 @@ default is not to follow symbolic links.
 Silent mode: nonexistent and unreadable files are ignored, i.e.
 their error messages are suppressed.
 .TP
-\fB\-\-save\-config[\fR=\fIFILE\fR]
+\fB\-\-save\-config\fR[=\fIFILE\fR]
 Save configuration FILE.  By default `.ugrep' is saved.  If FILE is
-a `\fB\-'\fR, write the configuration to standard output.
+a `\-', write the configuration to standard output.
 .TP
-\fB\-\-separator[\fR=\fISEP\fR]
+\fB\-\-separator\fR[=\fISEP\fR]
 Use SEP as field separator between file name, line number, column
 number, byte offset, and the matched line.  The default is a colon
 (`:').
 .TP
-\fB\-\-sort[\fR=\fIKEY\fR]
+\fB\-\-sort\fR[=\fIKEY\fR]
 Displays matching files in the order specified by KEY in recursive
 searches.  KEY can be `name' to sort by pathname (default), `best'
 to sort by best match with option \fB\-Z\fR (sort by best match requires
@@ -612,11 +612,11 @@ option may be repeated.  The possible file types can be (where
 `tcl', `tex', `text', `tiff', `Tiff', `tt', `typescript',
 `verilog', `vhdl', `vim', `xml', `Xml', `yacc', `yaml'.
 .TP
-\fB\-\-tabs[\fR=\fINUM\fR]
+\fB\-\-tabs\fR[=\fINUM\fR]
 Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
 NUM may be 1, 2, 4, or 8.  The default tab size is 8.
 .TP
-\fB\-\-tag[\fR=\fITAG\fR[,\fIEND\fR]]
+\fB\-\-tag\fR[=\fITAG\fR[,\fIEND\fR]]
 Disables colors to mark up matches with TAG.  END marks the end of
 a match if specified, otherwise TAG.  The default is `___'.
 .TP
@@ -671,13 +671,13 @@ not only lines containing the character `x'.
 .TP
 \fB\-y\fR, \fB\-\-any\-line\fR
 Any matching or non\-matching line is output.  Non\-matching lines
-are output with the `\fB\-'\fR separator as context of the matching lines.
+are output with the `\-' separator as context of the matching lines.
 See also options \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR.
 .TP
-\fB\-Z\fR[[+\fB\-~\fR]MAX], \fB\-\-fuzzy[\fR=[+\fB\-~\fR]MAX]
+\fB\-Z\fR[[+\-~]MAX], \fB\-\-fuzzy\fR[=[+\-~]MAX]
 Fuzzy mode: report approximate pattern matches within MAX errors.
 By default, MAX is 1: one deletion, insertion or substitution is
-allowed.  When `+' and/or `\fB\-'\fR precede MAX, only insertions and/or
+allowed.  When `+' and/or `\-' precede MAX, only insertions and/or
 deletions are allowed, respectively.  When `~' precedes MAX,
 substitution counts as one error.  For example, \fB\-Z\fR+~3 allows up to
 three insertions or substitutions, but no deletions.  The first
@@ -977,18 +977,29 @@ select unique lines only, unless option \fB-u\fR is used.
 .IP \fB%1\fR
 the first regex group capture of the match, and so on up to group \fB%9\fR,
 same as \fB%[1]#\fR; requires option \fB-P\fR.
-.IP \fB%[\fINUM\fR\fB]#\fR
+.IP \fB%[\fR\fINUM\fR\fB]#\fR
 the regex group capture \fINUM\fR; requires option \fB-P\fR.
+.IP \fB%[\fR\fINUM1\fR\fB|\fR\fINUM2\fR\fB|\fR...\fB]#\fR
+the first group capture \fINUM\fR that matched; requires option \fB-P\fR.
+.IP \fB%[\fR\fINAME\fR\fB]#\fR
+the \fINAME\fRd group capture; requires option \fB-P\fR and capturing pattern
+`(?<NAME>PATTERN)', see also \fB%G\fR.
+.IP \fB%[\fR\fINAME1\fR\fB|\fR\fINAME2|...\fR\fB]#\fR
+the first \fINAME\fRd group capture that matched; requires option \fB-P\fR
+and capturing pattern `(?<NAME>PATTERN)', see also \fB%G\fR.
 .IP \fB%G\fR
-list of group capture indices/names of the match (option \fB-P\fR).
-.IP \fB%[NAME1|NAME2|...]G\fR
-NAMEs corresponding to the group capture indices of the match.
+list of group capture indices/names that matched; requires option \fB-P\fR.
+.IP \fB%[\fR\fITEXT1\fR\fB|\fR\fITEXT2\fR\fB|...]G\fR
+list of \fITEXT\fR indexed by group capture indices that matched; requires option \fB-P\fR.
 .IP \fB%g\fR
-the group capture index/name of the match or 1 (option \fB-P\fR).
-.IP \fB%[NAME1|NAME2|...]g\fR
-NAME corresponding to the group capture index of the match.
+the group capture index/name matched or 1; requires option \fB-P\fR.
+.IP \fB%[\fR\fITEXT1\fR\fB|\fR\fITEXT2\fR\fB|\fR...\fB]g\fR
+the first \fITEXT\fR indexed by the first group capture index that matched; requires option \fB-P\fR.
 .IP \fB%%\fR
 the percentage sign.
+.PP
+Formatted output is written without a terminating newline, unless \fB%~\fR or
+`\\n' is explicitly specified in the format string.
 .PP
 The \fB[\fR\fIARG\fR\fB]\fR part of a field is optional and may be omitted.
 When present, the argument must be placed in \fB[]\fR brackets, for example
@@ -997,8 +1008,8 @@ When present, the argument must be placed in \fB[]\fR brackets, for example
 \fB%[\fR\fISEP\fR\fB]$\fR and \fB%u\fR are switches and do not send anything to
 the output.
 .PP
-The separator used by \fB%F\fR, \fB%H\fR, \fB%N\fR, \fB%K\fR, \fB%B\fR,
-\fB%S\fR, and \fB%G\fR may be changed by preceding the field by
+The separator used by the \fB%F\fR, \fB%H\fR, \fB%N\fR, \fB%K\fR, \fB%B\fR,
+\fB%S\fR and \fB%G\fR fields may be changed by preceding the field by
 \fB%[\fR\fISEP\fR\fB]$\fR.  When \fB[\fR\fISEP\fR\fB]\fR is not provided, this
 reverts the separator to the default separator or the separator specified with
 \fB--separator\fR.
