--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "June 19, 2021" "ugrep 3.3.3" "User Commands"
+.TH UGREP "1" "June 22, 2021" "ugrep 3.3.4" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -951,7 +951,7 @@ if not the first match: a colon, same as \fB%[:]>\fR.
 .IP \fB%;\fR
 if not the first match: a semicolon, same as \fB%[;]>\fR.
 .IP \fB%|\fR
-if not the first match: a verical bar, same as \fB%[|]>\fR.
+if not the first match: a vertical bar, same as \fB%[|]>\fR.
 .IP \fB%[\fR\fIARG\fR\fB]S\fR
 if not the first match: \fIARG\fR and separator, see also \fB%$\fR.
 .IP \fB%s\fR
