--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "August 06, 2021" "ugrep 3.3.7" "User Commands"
+.TH UGREP "1" "October 23, 2021" "ugrep 3.3.8" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -39,6 +39,10 @@ A query interface is opened with \fB-Q\fR (\fB--query\fR) to interactively
 specify search patterns and view search results.  Note that a \fIPATTERN\fR
 argument cannot be specified in this case.  To specify one or more patterns
 with \fB-Q\fR, use \fB-e PATTERN\fR.
+.PP
+Option \fB-f FILE\fR matches patterns specified in \fBFILE\fR.  If \fBFILE\fR
+is large and defines complex regular expression patterns, then option \fB-P\fR
+(Perl matching) may improve performance (this omits POSIX DFA construction.)
 .PP
 For help, \fB--help \fIWHAT\fR displays help on options related to \fIWHAT\fR.
 .PP
@@ -528,6 +532,8 @@ file processed.
 .TP
 \fB\-P\fR, \fB\-\-perl\-regexp\fR
 Interpret PATTERN as a Perl regular expression using PCRE2.
+Note that Perl pattern matching differs from the default grep POSIX
+pattern matching.
 .TP
 \fB\-p\fR, \fB\-\-no\-dereference\fR
 If \fB\-R\fR or \fB\-r\fR is specified, no symbolic links are followed, even when
@@ -618,11 +624,11 @@ number, and byte offset with the matched line.
 Search only files associated with TYPES, a comma\-separated list of
 file types.  Each file type corresponds to a set of filename
 extensions passed to option \fB\-O\fR and filenames passed to option \fB\-g\fR.
-For capitalized file types, the search is expanded to include files with
-matching file signature magic bytes, as if passed to option \fB\-M\fR.
-When a type is preceded by a `!' or a `^', excludes files of the specified
-type.  This option may be repeated.  The possible file types can be (where
-\fB\-t\fRlist displays a detailed list):
+For capitalized file types, the search is expanded to include files
+with matching file signature magic bytes, as if passed to option
+\fB\-M\fR.  When a type is preceded by a `!' or a `^', excludes files of
+the specified type.  This option may be repeated.  The possible
+file types can be (where \fB\-t\fRlist displays a detailed list):
 `actionscript', `ada', `asm', `asp', `aspx', `autoconf', `automake',
 `awk', `Awk', `basic', `batch', `bison', `c', `c++',
 `clojure', `csharp', `css', `csv', `dart', `Dart', `delphi',
@@ -972,9 +978,9 @@ if not the first match: a semicolon, same as \fB%[;]>\fR.
 .IP \fB%|\fR
 if not the first match: a vertical bar, same as \fB%[|]>\fR.
 .IP \fB%[\fR\fIARG\fR\fB]S\fR
-if not the first match: \fIARG\fR and separator, see also \fB%$\fR.
+if not the first match: \fIARG\fR and separator, see also \fB%[\fR\fISEP\fR\fB]$.
 .IP \fB%s\fR
-the separator, see also \fB%S\fR and \fB%$\fR.
+the separator, see also \fB%[\fR\fIARG\fR\fB]S\fR and \fB%[\fR\fISEP\fR\fB]$.
 .IP \fB%~\fR
 a newline character.
 .IP \fB%m\fR
@@ -1018,14 +1024,29 @@ the first regex group capture of the match, and so on up to group \fB%9\fR,
 same as \fB%[1]#\fR; requires option \fB-P\fR.
 .IP \fB%[\fR\fINUM\fR\fB]#\fR
 the regex group capture \fINUM\fR; requires option \fB-P\fR.
+.IP \fB%[\fR\fINUM\fR\fB]b\fR
+the byte offset of the group capture \fINUM\fR; requires option \fB-P\fR.  Use
+\fBe\fR for the ending byte offset and \fBd\fR for the byte length.
 .IP \fB%[\fR\fINUM1\fR\fB|\fR\fINUM2\fR\fB|\fR...\fB]#\fR
 the first group capture \fINUM\fR that matched; requires option \fB-P\fR.
+.IP \fB%[\fR\fINUM1\fR\fB|\fR\fINUM2\fR\fB|\fR...\fB]b\fR
+the byte offset of the first group capture \fINUM\fR that matched; requires
+option \fB-P\fR.  Use \fBe\fR for the ending byte offset and \fBd\fR for the
+byte length.
 .IP \fB%[\fR\fINAME\fR\fB]#\fR
 the \fINAME\fRd group capture; requires option \fB-P\fR and capturing pattern
 `(?<NAME>PATTERN)', see also \fB%G\fR.
+.IP \fB%[\fR\fINAME\fR\fB]b\fR
+the byte offset of the \fINAME\fRd group capture; requires option \fB-P\fR and
+capturing pattern `(?<NAME>PATTERN)'.  Use \fBe\fR for the ending byte offset
+and \fBd\fR for the byte length.
 .IP \fB%[\fR\fINAME1\fR\fB|\fR\fINAME2|...\fR\fB]#\fR
 the first \fINAME\fRd group capture that matched; requires option \fB-P\fR
 and capturing pattern `(?<NAME>PATTERN)', see also \fB%G\fR.
+.IP \fB%[\fR\fINAME1\fR\fB|\fR\fINAME2|...\fR\fB]b\fR
+the byte offset of the first \fINAME\fRd group capture that matched; requires
+option \fB-P\fR and capturing pattern `(?<NAME>PATTERN)'.  Use \fBe\fR for the
+ending byte offset and \fBd\fR for the byte length.
 .IP \fB%G\fR
 list of group capture indices/names that matched; requires option \fB-P\fR.
 .IP \fB%[\fR\fITEXT1\fR\fB|\fR\fITEXT2\fR\fB|...]G\fR
